--- a/homework/2/css/styles.css
+++ b/homework/2/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url("/repo/homework/2/img/lettersBackground.jpg");
+    background-image:url("repo/homework/2/img/lettersBackground.png");
 }
 
 header, footer, #form, #wrapper {
