--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
 
 #loginBar {
     width: 100%;
-    height: 30px;
-    background-color: #b000b5;
+    height: 45px;
+    background-color: #B0B0B0;
     color: white;
     border: 2px solid black;
     text-align: right;
@@ -17,9 +17,6 @@ body {
     padding: 5px;
 }
 
-#stupidSpaceNextToLogInLink {
-    visibility: hidden;
-}
 
 #headerBar {
     height: 150px;
