--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,9 @@ body {
 .title {
     text-align: center;
 }
+
+/* Always set the map height explicitly to define the size of the div
+* element that contains the map. */
+#map {
+    height: 100%;
+}
